--- a/packages/sdds-crm/README.mdx
+++ b/packages/sdds-crm/README.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown } from "@storybook/addon-docs";
+import { Meta, Markdown } from "@storybook/addon-docs/blocks";
 import ReadmeMd from './README.md?raw';
 
 <Meta title="About" />
