--- a/website/sdds-finai-docs/docs/components/Tree.mdx
+++ b/website/sdds-finai-docs/docs/components/Tree.mdx
@@ -364,3 +364,103 @@ export function App() {
     );
 }
 ```
+
+### Пример со скруглениями
+
+В данном примере показано, как сделать скругления у выбранного родительского блока на уровне `css`.
+
+```tsx live
+import React from 'react';
+import { Tree } from '@salutejs/sdds-finai';
+import styled from 'styled-components';
+
+export function App() {
+    const Wrapper = styled.div`
+        .tree-item-primary-background:not(.tree-item-primary-background ~ .tree-item-primary-background) {
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            overflow: hidden;
+        }
+
+        .tree-item-primary-background:not(:has(~ .tree-item-primary-background)) {
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+            overflow: hidden;
+        }
+    `;
+
+    const treeData = [
+        {
+            title: 'Основной каталог',
+            key: '0-0',
+            children: [
+                {
+                    title: 'Документы',
+                    key: '0-0-0',
+                    children: [
+                        {
+                            title: 'Отчёты',
+                            key: '0-0-0-0',
+                            disabled: true,
+                        },
+                        {
+                            title: 'Проекты',
+                            key: '0-0-0-1',
+                            children: [
+                                {
+                                    title: 'Проект Альфа',
+                                    key: '0-0-0-1-0',
+                                },
+                                {
+                                    title: 'Проект Бета',
+                                    key: '0-0-0-1-1',
+                                },
+                            ],
+                        },
+                        {
+                            title: 'Категории',
+                            key: '0-0-0-2',
+                            children: [
+                                {
+                                    title: 'Категория Гамма',
+                                    key: '0-0-0-2-0',
+                                },
+                                {
+                                    title: 'Категория Дельта',
+                                    key: '0-0-0-2-1',
+                                },
+                            ],
+                        },
+                    ],
+                },
+                {
+                    title: 'Медиа',
+                    key: '0-0-1',
+                    children: [
+                        {
+                            title: 'Фотографии',
+                            key: '0-0-1-0',
+                        },
+                    ],
+                },
+            ],
+        },
+        {
+            title: 'Корзина',
+            key: '0-1',
+            children: [
+                {
+                    title: 'Удалённые файлы',
+                    key: '0-1-0',
+                },
+            ],
+        },
+    ];
+
+    return (
+        <Wrapper>
+            <Tree items={treeData} defaultExpandAll fullWidthItemSelection />
+        </Wrapper>
+    );
+}
+```
