--- a/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
+++ b/website/plasma-web-docs/docs/components/NavigationDrawer.mdx
@@ -4,6 +4,8 @@ title: NavigationDrawer
 ---
 
 import { PropsTable, Description } from '@site/src/components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # NavigationDrawer
 
@@ -16,17 +18,6 @@ NavigationDrawer — это компонент навигационного ме
 - `static` — статичное меню слева от контента
 - `drawer` — выдвижное меню поверх контента без затемнения фона
 - `overlay` — модальное меню поверх контента с затемнением фона
-
-NawigationDrawer содержит следующие параметры:
-- `mode` - режим отображения
-- `opened` - флаг для открытия/закрытия NavigationDrawer. Если не указан, то NavigationDrawer открыт.
-- `onHide` - callback, срабатывающий при закрытии меню. Только при `mode="overlay"`.
-- `header` - ячейка для контента в начале меню.
-- `footer` - ячейка для контента в конце меню.
-- `size` - размер элемента меню.
-- `view` - вид компонента.
-- `sections` - список секций меню
-- `withContentLeft` - флаг, указывающий на наличие контента слева от меню (иконки)
 
 ### Структура меню
 
@@ -43,192 +34,313 @@ NawigationDrawer содержит следующие параметры:
 - `contentLeft` Контент слева (вместо иконки, при включенном `withContentLeft`)
 - `counter` Счетчик
 - `hasIndicator` Индикатор
-- `action` Действие (функция обратного вызова или URL для перехода)
+- `onClick` Колбек при нажатии на меню
+- `href` Ссылка
+- `target` Для ссылки
 
 ## Примеры
 
-### Базовое использование
+<Tabs>
+    <TabItem value="simple" label="Simple" default>
+        ```tsx live
+        import React from 'react';
+        import { NavigationDrawer } from '@salutejs/plasma-web';
 
-```tsx live
-import React, { useState } from 'react';
-import { NavigationDrawer } from '@salutejs/plasma-web';
-import { IconBlankOutline, IconSettingsFill, IconHomeAltFill, IconLogout, IconStacksOutline } from '@salutejs/plasma-icons';
-
-export function App() {
-    const [isOpen, setIsOpen] = useState(true);
-
-    return (
-        <div style={{position: 'relative'}}>
-            <NavigationDrawer
-                opened={isOpen}
-                withContentLeft={true}
-                sections={[
+        export function App() {
+            const sections = [{
+                items: [
                     {
-                        label: 'Основная секция',
-                        items: [
-                            {
-                                label: 'Главная',
-                                icon: <IconHomeAltFill />,
-                                selected: true,
-                                action: () => console.log('Главная')
-                            },
-                            {
-                                label: 'Настройки',
-                                icon: <IconSettingsFill />,
-                                action: () => console.log('Настройки'),
-                            },
-                        ]
+                        label: 'Главная',
+                        selected: true
                     },
                     {
-                        label: 'Документы',
-                        items: [
-                            {
-                                label: 'Обзор документов',
-                                icon: <IconBlankOutline />,
-                                action: () => console.log('Обзор документов'),
-                            },
-                            {
-                                label: 'С индикатором',
-                                icon: <IconStacksOutline />,
-                                action: () => console.log('С индикатором'),
-                                hasIndicator: true
-                            },
-                        ]
+                        label: 'Выход',
                     },
-                    {
-                        items: [
-                            {
-                                label: 'Выход',
-                                icon: <IconLogout />,
-                                action: () => console.log('Выход')
-                            },
-                        ]
-                    }
-                ]}
-            >
-                <div style={{ padding: '20px' }}>
-                    <button onClick={() => setIsOpen(!isOpen)}>
-                        Переключить меню
-                    </button>
-                    <p>Основной контент приложения</p>
+                ]
+            }];
+             return (
+                <div>
+                    <NavigationDrawer
+                        sections={sections}
+                    >
+                    Основной контент
+                    </NavigationDrawer>
                 </div>
-            </NavigationDrawer>
-        </div>
-    );
-}
-```
-
-### Режим overlay
-
-```tsx live
-import React, { useState } from 'react';
-import { NavigationDrawer } from '@salutejs/plasma-web';
-import { IconBlankOutline } from '@salutejs/plasma-icons';
-
-export function App() {
-    const [isOpen, setIsOpen] = useState(false);
-
-    return (
-        <div
-            style={{
-            width: 500,
-            height: 300,
-            position: 'relative',
-            overflow: 'hidden',
-            transform: 'translateZ(0)',
-            }}
-        >
-            <NavigationDrawer
-                mode="overlay"
-                opened={isOpen}
-                onHide={() => setIsOpen(false)}
-                sections={[
-                    {
-                        hasDivider: false,
-                        items: [
-                            {
-                                label: 'Пункт меню',
-                                action: () => console.log('Клик'),
-                                icon: <IconBlankOutline />,
-                            }
-                        ]
-                    }
-                ]}
-                withContentLeft
-            >
-                <div style={{ padding: '20px', width: '100%' }}>
-                    <button onClick={() => setIsOpen(true)}>
-                        Открыть меню
-                    </button>
-                    <p>Основной контент</p>
-                </div>
-            </NavigationDrawer>
-        </div>
-    );
-}
-```
-
-### Режим drawer
-
-```tsx live
-import React, { useState, useRef, useEffect } from 'react';
-import { NavigationDrawer } from '@salutejs/plasma-web';
-import { IconBlankOutline } from '@salutejs/plasma-icons';
-
-export function App() {
-    const [isOpen, setIsOpen] = useState(false);
-
-    const ref = useRef<HTMLDivElement>(null);
-
-    useEffect(() => {
-        if (ref.current) {
-            const sidebar = ref.current.childNodes[0] as HTMLDivElement;
-            sidebar.onmouseenter = () => {
-                setIsOpen(true);
-            };
-            sidebar.onmouseleave = () => {
-                setIsOpen(false);
-            };
+            );
         }
-    }, [ref]);
+        ```
+    </TabItem>
+    <TabItem value="content-left" label="Content Left" default>
+        ```tsx live
+        import React from 'react';
+        import { NavigationDrawer } from '@salutejs/plasma-web';
 
-    return (
-        <div
-            style={{
-            width: 500,
-            height: 300,
-            position: 'relative',
-            overflow: 'hidden',
-            transform: 'translateZ(0)',
-            }}
-        >
-            <NavigationDrawer
-                mode="drawer"
-                opened={isOpen}
-                ref={ref}
-                sections={[
-                    {
-                        hasDivider: false,
-                        items: [
-                            {
-                                label: 'Пункт меню',
-                                action: () => console.log('Клик'),
-                                icon: <IconBlankOutline />,
-                            }
-                        ]
-                    }
-                ]}
-                sidebarProps={{
-                    onMouseEnter: () => setIsOpen(true),
-                    onMouseLeave: () => setIsOpen(false),
-                }}
-                withContentLeft
-            >
-                <div style={{ padding: '20px' }}>
-                    <p>Основной контент</p>
+        export function App() {
+            const ContentLeft = (
+                <div style={{backgroundColor: '#99999950', width: '100%', height: '100%'}}/>
+            )
+
+            const sections = [
+                {
+                    label: 'Section 1',
+                    items: [
+                        {
+                            label: 'Item 1',
+                            contentLeft: ContentLeft,
+                            selected: true,
+                        },
+                        {
+                            label: 'Item 2',
+                            contentLeft: ContentLeft,
+                            counter: 1,
+                        },
+                        {
+                            label: 'Item 3',
+                            contentLeft: ContentLeft,
+                            disabled: true,
+                        },
+                        {
+                            label: 'Item 4',
+                            contentLeft: ContentLeft,
+                            hasIndicator: true,
+                        },
+                        { label: 'Item 5', contentLeft: ContentLeft },
+                    ],
+                },
+            ];
+             return (
+                <div>
+                    <NavigationDrawer
+                        sections={sections}
+                    >
+                    Основной контент
+                    </NavigationDrawer>
                 </div>
-            </NavigationDrawer>
-        </div>
-    );
-}
-```
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value='static' label="Static">
+        ```tsx live
+        import React, { useState } from 'react';
+        import { NavigationDrawer, Button } from '@salutejs/plasma-web';
+        import { IconBlankOutline, IconSettingsFill, IconHomeAltFill, IconLogout, IconStacksOutline } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [isOpen, setIsOpen] = useState(true);
+
+            return (
+                <div style={{position: 'relative'}}>
+                    <NavigationDrawer
+                        opened={isOpen}
+                        sections={[
+                            {
+                                label: 'Основная секция',
+                                items: [
+                                    {
+                                        label: 'Главная',
+                                        icon: <IconHomeAltFill />,
+                                        selected: true,
+                                        action: () => console.log('Главная')
+                                    },
+                                    {
+                                        label: 'Настройки',
+                                        icon: <IconSettingsFill />,
+                                        action: () => console.log('Настройки'),
+                                    },
+                                ]
+                            },
+                            {
+                                label: 'Документы',
+                                items: [
+                                    {
+                                        label: 'Обзор документов',
+                                        icon: <IconBlankOutline />,
+                                        action: () => console.log('Обзор документов'),
+                                    },
+                                    {
+                                        label: 'С индикатором',
+                                        icon: <IconStacksOutline />,
+                                        action: () => console.log('С индикатором'),
+                                        hasIndicator: true
+                                    },
+                                ]
+                            },
+                            {
+                                items: [
+                                    {
+                                        label: 'Выход',
+                                        icon: <IconLogout />,
+                                        action: () => console.log('Выход')
+                                    },
+                                ]
+                            }
+                        ]}
+                    >
+                        <div style={{ padding: '20px' }}>
+                            <Button onClick={() => setIsOpen(!isOpen)}>
+                                Переключить меню
+                            </Button>
+                            <p>Основной контент приложения</p>
+                        </div>
+                    </NavigationDrawer>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value='overlay' label="Overlay">
+        ```tsx live
+        import React, { useState } from 'react';
+        import { NavigationDrawer, Button } from '@salutejs/plasma-web';
+        import { IconBlankOutline } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [isOpen, setIsOpen] = useState(false);
+
+            return (
+                <div
+                    style={{
+                        width: 500,
+                        height: 300,
+                        position: 'relative',
+                        overflow: 'hidden',
+                        transform: 'translateZ(0)',
+                    }}
+                >
+                    <NavigationDrawer
+                        mode="overlay"
+                        opened={isOpen}
+                        onHide={() => setIsOpen(false)}
+                        sections={[
+                            {
+                                hasDivider: false,
+                                items: [
+                                    {
+                                        label: 'Пункт меню',
+                                        action: () => console.log('Клик'),
+                                        icon: <IconBlankOutline />,
+                                    }
+                                ]
+                            }
+                        ]}
+                    >
+                        <div style={{ padding: '20px', width: '100%' }}>
+                            <Button onClick={() => setIsOpen(true)}>
+                                Открыть меню
+                            </Button>
+                            <p>Основной контент</p>
+                        </div>
+                    </NavigationDrawer>
+            </div>
+        );
+    }
+    ```
+    </TabItem>
+    <TabItem value='drawer' label="Drawer">
+        ```tsx live
+        import React, { useState } from 'react';
+        import { NavigationDrawer, Button } from '@salutejs/plasma-web';
+        import { IconBlankOutline } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [isOpen, setIsOpen] = useState(false);
+
+            return (
+                <div
+                    style={{
+                        width: 500,
+                        height: 300,
+                        position: 'relative',
+                        overflow: 'hidden',
+                        transform: 'translateZ(0)',
+                    }}
+                >
+                    <NavigationDrawer
+                        mode="drawer"
+                        opened={isOpen}
+                        sections={[
+                            {
+                                hasDivider: false,
+                                items: [
+                                    {
+                                        label: 'Пункт меню',
+                                        action: () => console.log('Клик'),
+                                        icon: <IconBlankOutline />,
+                                    }
+                                ]
+                            }
+                        ]}
+                    >
+                        <div style={{ padding: '20px' }}>
+                            <p>Основной контент</p>
+                            <Button onClick={() => setIsOpen(!isOpen)}>
+                                Переключить меню
+                            </Button>
+                        </div>
+                    </NavigationDrawer>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value='drawer-hover' label="Drawer with hover">
+        ```tsx live
+        import React, { useState, useRef, useEffect } from 'react';
+        import { NavigationDrawer } from '@salutejs/plasma-web';
+        import { IconBlankOutline } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [isOpen, setIsOpen] = useState(false);
+
+            const ref = useRef<HTMLDivElement>(null);
+
+            useEffect(() => {
+                if (ref.current) {
+                    const sidebar = ref.current.childNodes[0] as HTMLDivElement;
+                    sidebar.onmouseenter = () => {
+                        setIsOpen(true);
+                    };
+                    sidebar.onmouseleave = () => {
+                        setIsOpen(false);
+                    };
+                }
+            }, [ref]);
+
+            return (
+                <div
+                    style={{
+                        width: 500,
+                        height: 300,
+                        position: 'relative',
+                        overflow: 'hidden',
+                        transform: 'translateZ(0)',
+                    }}
+                >
+                    <NavigationDrawer
+                        mode="drawer"
+                        opened={isOpen}
+                        ref={ref}
+                        sections={[
+                            {
+                                hasDivider: false,
+                                items: [
+                                    {
+                                        label: 'Пункт меню',
+                                        action: () => console.log('Клик'),
+                                        icon: <IconBlankOutline />,
+                                    }
+                                ]
+                            }
+                        ]}
+                    >
+                        <div style={{ padding: '20px' }}>
+                            <p>Основной контент</p>
+                        </div>
+                    </NavigationDrawer>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
