--- a/website/plasma-b2c-docs/docs/components/CodeField.mdx
+++ b/website/plasma-b2c-docs/docs/components/CodeField.mdx
@@ -148,3 +148,17 @@ export function App() {
     );
 }
 ```
+
+### Работа с OTP-кодом из СМС
+Функционал [Web OTP API](https://developer.mozilla.org/en-US/docs/Web/API/WebOTP_API) актуален только в мобильных браузерах. 
+Для корректного автозаполнения кода, СМС должна быть отправлена в следующем формате:
+```
+Ваш код подтверждения: 123456.
+
+@plasma.sberdevices.ru #123456
+```
+
+Первая и вторая (пустая) строки являются необязательными и предназначены для удобства чтения пользователем.
+Последняя строка обязательна и должна состоять из:
+- доменной части URL-адреса веб-сайта, который вызвал API; обязательно начинается с символа `@`
+- затем следует OTP, перед которым стоит знак `#`
