feat(*): update disabled chips in Combobox and Select

--- a/website/plasma-web-docs/docs/components/Combobox.mdx
+++ b/website/plasma-web-docs/docs/components/Combobox.mdx
@@ -49,7 +49,7 @@ type Items = Array<{
     }>;
 ```
 
-Тип выбора комбобокса - одиночный или множественный зависит от типа `value` и `onChange`. В одиночном value - `string`, в множественном - `Array<string>`.\
+Тип выбора комбобокса - одиночный или множественный зависит от типа `value` и `onChange`. В одиночном value - `string`, в множественном - `Array<string>`.
 
 
 ## Примеры
@@ -585,6 +585,66 @@ type Items = Array<{
         ```
     </TabItem>
 </Tabs>
+
+## Взаимодействие с disabled-элементами
+
+Изнутри компонента взаимодействие с disabled-элементами **невозможно**. Ниже представлены примеры с `selected` и `unselected` disabled-элементом.
+
+```tsx live
+    import React, { useState, useEffect } from 'react';
+    import { Combobox } from '@salutejs/plasma-web';
+
+    export function App() {
+        const items = [
+            {
+                value: 'north_america',
+                label: 'Северная Америка',
+            },
+            {
+                value: 'south_america',
+                label: 'Южная Америка',
+                items: [
+                    {
+                        value: 'brazil',
+                        label: 'Бразилия',
+                        disabled: true,
+                    },
+                    {
+                        value: 'argentina',
+                        label: 'Аргентина',
+                    },
+                ],
+            },
+        ];
+
+        const [value, setValue] = useState(['brazil']);
+
+        return (
+            <div style={{ display: "flex", height: "300px" }}>
+                <div style={{ width: "300px" }}>
+                    <Combobox
+                        multiple
+                        label="Label"
+                        placeholder="Placeholder"
+                        items={items}
+                    />
+                </div>
+
+                <div style={{ width: "300px" }}>
+                    <Combobox
+                        multiple
+                        label="Label"
+                        placeholder="Placeholder"
+                        items={items}
+                        value={value}
+                        onChange={setValue}
+                        isTargetAmount
+                    />
+                </div>
+            </div>
+        );
+    }
+```
 
 ## Использование с React Hook Form и нативной формой
 
